--- a/projects/admin/src/locale/messages(ar-${region}).xlf
+++ b/projects/admin/src/locale/messages(ar-${region}).xlf
@@ -648,8 +648,8 @@
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/app/components/media/media.component.ts</context>
           <context context-type="linenumber">225</context>
-          </context-group>
-          </trans-unit>
+        </context-group>
+      </trans-unit>
       <trans-unit id="7744292213705278878" datatype="html">
         <source>User Profile</source>
         <target state="translated">الملف الشخصي</target>
@@ -769,14 +769,282 @@
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/app/components/create-path-instance-dialog/create-path-instance-dialog.component.html</context>
           <context context-type="linenumber">16</context>
-          </context-group>
-          </trans-unit>
+        </context-group>
+      </trans-unit>
       <trans-unit id="1082022058906746619" datatype="html">
         <source>reset password</source>
         <target state="translated">إعادة تعيين كلمة السر</target>
         <context-group purpose="location">
           <context context-type="sourcefile">projects/admin/src/app/components/user-profile/user-profile.component.html</context>
           <context context-type="linenumber">29</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="7588824991441631855" datatype="html">
+        <source>User Profile</source>
+        <target state="translated">الملف الشخصي</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/layout/header/header.component.html</context>
+          <context context-type="linenumber">8</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="5133287683090293412" datatype="html">
+        <source>Logout</source>
+        <target state="translated">تسجيل الخروج</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/layout/header/header.component.html</context>
+          <context context-type="linenumber">12</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="2454050363478003966" datatype="html">
+        <source>Login</source>
+        <target state="translated">تسجيل الدخول</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/login/login.component.html</context>
+          <context context-type="linenumber">4</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/login/login.component.html</context>
+          <context context-type="linenumber">33</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="193324215946023286" datatype="html">
+        <source>username</source>
+        <target state="translated">اسم المستخدم</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/login/login.component.html</context>
+          <context context-type="linenumber">6</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="8480945899933635238" datatype="html">
+        <source>wrong username or password</source>
+        <target state="translated">خطأ في اسم المستخدم أو كلمة المرور</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/login/login.component.html</context>
+          <context context-type="linenumber">27</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="6542676228301148432" datatype="html">
+        <source>login</source>
+        <target state="translated">تسجيل الدخول</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/login/login.component.html</context>
+          <context context-type="linenumber">4</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/login/login.component.html</context>
+          <context context-type="linenumber">27</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="3569211035626562623" datatype="html">
+        <source>username is required</source>
+        <target state="translated">اسم المستخدم مطلوب</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/login/login.component.html</context>
+          <context context-type="linenumber">9</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="174465106029438224" datatype="html">
+        <source>remember me</source>
+        <target state="translated">تذكرني</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/login/login.component.html</context>
+          <context context-type="linenumber">23</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="1810017607161915196" datatype="html">
+        <source>logout</source>
+        <target state="translated">تسجيل الخروج</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/layout/header/header.component.html</context>
+          <context context-type="linenumber">12</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="6421100116763949889" datatype="html">
+        <source>user profile</source>
+        <target state="translated">الملف الشخصي</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/layout/header/header.component.html</context>
+          <context context-type="linenumber">8</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="6631147598757213823" datatype="html">
+        <source>download</source>
+        <target state="translated">تنزيل</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">4</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="1059784693423848532" datatype="html">
+        <source>add</source>
+        <target state="translated">إضافة</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/components/media/media.component.ts</context>
+          <context context-type="linenumber">156</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">6</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="119523350819979557" datatype="html">
+        <source>rename</source>
+        <target state="translated">إعادة تسمية</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/components/media/media.component.ts</context>
+          <context context-type="linenumber">225</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="7387635272539030076" datatype="html">
+        <source>new</source>
+        <target state="translated">جديد</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">8</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="7300848098821660663" datatype="html">
+        <source>replace</source>
+        <target state="translated">تبديل</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">9</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="7982607155521959690" datatype="html">
+        <source>select</source>
+        <target state="translated">اختيار</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">10</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="2456043080471762298" datatype="html">
+        <source>delete</source>
+        <target state="translated">حذف</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">11</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="6639521126730934817" datatype="html">
+        <source>Media preview is not supported</source>
+        <target state="translated">الوسائط غير مدعومة</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">12</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="8990828336503516412" datatype="html">
+        <source>delete selected</source>
+        <target state="translated">حذف المحدد</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">13</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="4574517965985993617" datatype="html">
+        <source>Media Files</source>
+        <target state="translated">ملفات الميديا</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">14</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="5569593341816938795" datatype="html">
+        <source>delete folder</source>
+        <target state="translated">حذف المجلد</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">15</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="4764753354726619321" datatype="html">
+        <source>rename folder</source>
+        <target state="translated">إعادة تسمية المجلد</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">16</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="1133618620143483249" datatype="html">
+        <source>add folder</source>
+        <target state="translated">إضافة مجلد</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">17</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="6709832313734940670" datatype="html">
+        <source>Media Folders</source>
+        <target state="translated">مجلدات الميديا</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">18</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="8943156472912178739" datatype="html">
+        <source>password is required</source>
+        <target state="translated">كلمة المرور مطلوبة</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">20</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="7158592746571420879" datatype="html">
+        <source>search</source>
+        <target state="translated">بحث</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">26</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="1573601677905671364" datatype="html">
+        <source>filters</source>
+        <target state="translated">تصنيف</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">27</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="6887688494282671779" datatype="html">
+        <source>Password should be at least 6 characters</source>
+        <target state="translated">كلمة المرور على الاقل 6 أحرف</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">29</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="4533486874197001760" datatype="html">
+        <source>Manazel Al Abrar</source>
+        <target state="translated">منازل اﻷبرار</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">38</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="1824912444360090771" datatype="html">
+        <source>operator</source>
+        <target state="translated">العملية</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">40</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="8167904999979308163" datatype="html">
+        <source>field</source>
+        <target state="translated">الحقل</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">41</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="3375720161310377589" datatype="html">
+        <source>value</source>
+        <target state="translated">القيمة</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/admin/src/app/translations/general.ts</context>
+          <context context-type="linenumber">39</context>
         </context-group>
       </trans-unit>
     </body>
